align container in logo animation. fix style in login sentence

--- a/app/components/logo-animation/logo-animation.less
+++ b/app/components/logo-animation/logo-animation.less
@@ -1,3 +1,7 @@
+.slideshow__container {
+  display: flex;
+  justify-content: center;
+}
 .logo-animation {
   width: 100%;
   display: flex;
@@ -17,7 +21,7 @@
   }
 }
 .crm-animation {
-  width: 100%;
+  width: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -45,12 +49,14 @@
         margin: 0;
         animation: titleMove 0.3s forwards;
         animation-delay: 0.4s;
-        transform: translateY(100%)
+        transform: translateY(100%);
+        line-height: 1;
       }
     }
     .crm_bottom {
       margin-top: 0.3rem;
       p {
+        line-height: 1;
         margin: 0;
         animation: titleMove 0.3s forwards;
         animation-delay: 0.6s;
