--- a/app/pages/sign-up/sign-up.less
+++ b/app/pages/sign-up/sign-up.less
@@ -42,18 +42,20 @@
       overflow: hidden;
     }
     .sign-up-question {
-      margin: 0;
-      padding: 0.25rem 0 1.4rem;
+      display: flex;
+      color: var(--main-color);
+      margin: 0.25rem 0 1.4rem;
       font-size: 0.75rem;
       animation: titleMove 0.3s forwards;
       animation-delay: 1.3s;
       transform: translateY(100%);
-      a {
+      text-decoration: none;
+      .login_label {
+        font-weight: bold;
         -moz-margin-start: 0.4rem;
         -webkit-margin-start: 0.4rem;
         margin-inline-start: 0.4rem;
         color: var(--dark-color);
-        text-decoration: none;
       }
     }
     form {
